build/testuserdir/var/cache/index/s1/errors/1/vendor/phpunit/phpunit/tests/TextUI/phpt-xfail.phpt.warn
WARNING:11:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	%
WARNING:11:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'by'
WARNING:11:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'Sebastian'
WARNING:11:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'Bergmann'
WARNING:13:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	integer '1'
WARNING:13:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	(
WARNING:13:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	)
WARNING:15:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	%
WARNING:15:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	','
WARNING:15:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	%
WARNING:17:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'OK'
WARNING:17:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	','
WARNING:17:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'incomplete'
WARNING:17:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	','
WARNING:17:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	','
WARNING:17:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'tests'
WARNING:17:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	!
WARNING:18:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	\d
WARNING:18:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	','
WARNING:18:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	','
WARNING:18:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	End of File
